--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@ table {
     <th>Accepted terms?</th> 
   </tr> 
 </table>
-<script src="index2.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
